--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gourab Kumar Ghosh</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Hello , </h1>
+            <h1>My name is <span class="name-color"> Gourab Kumar Ghosh </span> </h1>
+
+            <h3>Full Stack Web Devloper</h3>
+            <p>Looking forward to a challenging role in your company to utilize my problem solving, fast learning,
+                coding,
+                communication skills for the growth of the organization as well as to enhance my knowledge about new and
+                emerging trends in this sector</p>
+            <a class="link-button" target="__blank" href="https://www.linkedin.com/in/gourab997">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="./image/my-bg.png" alt="Gourab Kumar Ghosh">
+        </div>
+
+    </section>
+
 </body>
+
 </html>
