--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
 
     </section>
 
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="./image/my-bg (3).png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Professional Web Developer</h2>
+            <p> I had to work on many course-based projects as a student in the CSE department at American
+                International University Bangladesh. I recently worked with group members to create a tours travels
+                related website using the Laravel API and Reactjs and Now I working on a blog website using Nodejs. I
+                have good knowledge of Html, CSS, JavaScript, Ajax, Bootstrap, Laravel, and Reactjs and have some
+                knowledge about Restful APIs.</p>
+            <a class="link-button" target="_blank" href="">Download Resume </a>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
